charts/templates/articles-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: articles-service
    version: '1.0.0'
  name: articles-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: articles-service
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: articles-service
        version: v1
    spec:
      serviceAccountName: micro-service-account
      containers:
        - name: articles-service
          image: asaker/articles-service:1.0.0
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /api
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
            failureThreshold: 2
      restartPolicy: Always
      volumes: null
