charts/templates/config-reader-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: config-reader-service
    version: v1
  name: config-reader-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-reader-service
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: config-reader-service
        version: v1
    spec:
      containers:
        - image: asaker/config-reader-service:1.0.0
          imagePullPolicy: 'Always'
          name: config-reader-service
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /tmp
      restartPolicy: Always
      serviceAccountName: 'micro-service-account'
      volumes:
        - name: config-volume
          configMap:
            name: myconf
