charts/templates/articles-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    service: articles-service
  name: articles-service
spec:
  ports:
    - name: '3000'
      port: 3000
      targetPort: 3000
  selector:
    service: articles-service
