charts/templates/config-reader-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    service: config-reader-service
  name: config-reader-service
spec:
  ports:
    - name: '3001'
      port: 3001
      targetPort: 3001
  selector:
    service: config-reader-service
