charts/templates/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: micros-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: micros
spec:
  hosts:
    - '*'
  gateways:
    - micros-gateway
  http:
    - match:
        - uri:
            prefix: /micros
      route:
        - destination:
            port:
              number: 3000
            host: articles-service.demo.svc.cluster.local
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   annotations:
#     kubernetes.io/ingress.class: istio
#   name: ingress
# spec:
#   rules:
#     - host: 'kind.test'
#       http:
#         paths:
#           - path: /micros
#             backend:
#               serviceName: articles-service
#               servicePort: 3000
